--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "givemetime",
   "version": "0.0.1",
   "description": "Project to give some time to a R&D project suggested by a team member",
-  "main": "index.js",
+  "main": "src/index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,32 @@
   "bugs": {
     "url": "https://github.com/ericraffin/givemetime/issues"
   },
-  "homepage": "https://github.com/ericraffin/givemetime#readme"
+  "homepage": "https://github.com/ericraffin/givemetime#readme",
+  "devDependencies": {
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
+  "dependencies": {
+    "babel-preset-stage-1": "^6.5.0",
+    "immutable": "^3.7.6",
+    "material-ui": "^0.15.0-alpha.2",
+    "react": "^0.14.8",
+    "react-addons-pure-render-mixin": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.0",
+    "redux": "^3.3.1",
+    "socket.io-client": "^1.4.5"
+  }
 }
