--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Project to give some time to a R&D project suggested by a team member",
   "main": "src/index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "./node_modules/.bin/webpack-dev-server",
+    "build": "./node_modules/.bin/webpack ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,12 +19,13 @@
   },
   "homepage": "https://github.com/ericraffin/givemetime#readme",
   "devDependencies": {
-    "babel-core": "^6.7.4",
+    "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "babel": {
@@ -32,15 +35,12 @@
     ]
   },
   "dependencies": {
-    "babel-preset-stage-1": "^6.5.0",
-    "immutable": "^3.7.6",
-    "material-ui": "^0.15.0-alpha.2",
-    "react": "^0.14.8",
-    "react-addons-pure-render-mixin": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.0.0",
-    "redux": "^3.3.1",
-    "socket.io-client": "^1.4.5"
+    "material-ui": "^0.15.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2"
   }
 }
