--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.1",
@@ -38,6 +39,7 @@
     "material-ui": "^0.15.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-google-login": "^2.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
