--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
     "react-hot-loader": "^1.3.0",
+    "reindex-cli": "^0.4.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
@@ -40,8 +41,10 @@
     ]
   },
   "dependencies": {
+    "apollo-client": "^0.3.12",
     "material-ui": "^0.15.0",
     "react": "^15.0.2",
+    "react-apollo": "^0.3.5",
     "react-dom": "^15.0.2",
     "react-google-login": "^2.0.0",
     "react-grid-layout": "^0.12.3",
