--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-flow-comments": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
@@ -41,16 +42,15 @@
     ]
   },
   "dependencies": {
-    "apollo-client": "^0.3.12",
     "material-ui": "^0.15.0",
     "react": "^15.0.2",
-    "react-apollo": "^0.3.5",
     "react-dom": "^15.0.2",
     "react-google-login": "^2.0.0",
     "react-grid-layout": "^0.12.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
