--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "./node_modules/.bin/webpack-dev-server --host 0.0.0.0",
+    "client": "./node_modules/.bin/webpack-dev-server --host localhost --open",
+    "server": "./node_modules/.bin/postgraphql postgres://give_me_time:give_me_time@localhost:5435/give_me_time --schema give_me_time --development",
     "build": "./node_modules/.bin/webpack ./webpack.config.js"
   },
   "repository": {
@@ -30,7 +31,6 @@
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
     "react-hot-loader": "^1.3.0",
-    "reindex-cli": "^0.4.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "material-ui": "^0.15.0",
+    "postgraphql": "^1.5.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-google-login": "^2.0.0",
