--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Project to give some time to a R&D project suggested by a team member",
   "main": "src/index.jsx",
   "scripts": {
-    "test": "./node_modules/.bin/eslint src --ext .js --ext .jsx",
+    "test": "./node_modules/.bin/eslint src --ext .js --ext .jsx && mocha --compilers js:babel-register --recursive",
     "db": "docker-compose -f server/docker-compose.yml up",
     "db:rm": "docker-compose -f server/docker-compose.yml rm",
     "client": "./node_modules/.bin/webpack-dev-server --host localhost --open",
     "server": "./node_modules/.bin/postgraphql postgres://$PGUSER:$PGPASSWORD@$PGHOST:$PGPORT/$PGDATABASE --schema give_me_time --development",
-    "build": "./node_modules/.bin/webpack ./webpack.config.js"
+    "build": "./node_modules/.bin/webpack ./webpack.config.js",
+    "jest": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -26,15 +27,21 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-flow-comments": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
+    "expect": "^1.20.1",
+    "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
+    "redux-mock-store": "^1.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
