Remove sqitch, add simple migration system

--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "test": "./node_modules/.bin/eslint src --ext .js --ext .jsx",
     "db": "docker-compose -f server/docker-compose.yml up",
     "db:rm": "docker-compose -f server/docker-compose.yml rm",
-    "db:_sqitch": "docker run -it --rm -v $(pwd):/project --workdir=/project -v ~/.sqitch:/root/.sqitch aleksandrvin/sqitch",
-    "db:deploy": "npm run db:_sqitch --loglevel=silent -- deploy db:pg://$PGUSER:$PGPASSWORD@$PGHOST:$PGPORT/$PGDATABASE --verify",
-    "db:revert": "npm run db:_sqitch --loglevel=silent -- revert db:pg://$PGUSER:$PGPASSWORD@$PGHOST:$PGPORT/$PGDATABASE --to @HEAD^ -y",
-    "db:rebase": "npm run db:_sqitch --loglevel=silent -- rebase db:pg://$PGUSER:$PGPASSWORD@$PGHOST:$PGPORT/$PGDATABASE @HEAD^ -y",
-    "db:test": "docker run --rm -v $(pwd)/server/sqitch/test/:/test digit/docker-pg-prove -h $PGHOST -p $PGPORT -u $PGUSER -w $PGPASSWORD -d $PGDATABASE -t '/test/*.sql'",
+    "db:migration:create": "db-migrate --migrations-dir ./server/migration --sql-file create",
+    "db:migrate": "db-migrate --migrations-dir ./server/migration up",
+    "db:revert": "db-migrate --migrations-dir ./server/migration down",
+    "db:test": "docker run --rm -v $(pwd)/server/migration/sqls/:/test digit/docker-pg-prove -h $PGHOST -p $PGPORT -u $PGUSER -w $PGPASSWORD -d $PGDATABASE -t '/test/*-test.sql'",
     "client": "./node_modules/.bin/webpack-dev-server --host localhost --open",
     "server": "./node_modules/.bin/postgraphql postgres://$PGUSER:$PGPASSWORD@$PGHOST:$PGPORT/$PGDATABASE --schema give_me_time --development",
     "build": "./node_modules/.bin/webpack ./webpack.config.js"
@@ -37,6 +36,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
+    "db-migrate": "^0.9.25",
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
     "react-hot-loader": "^1.3.0",
