--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "src/index.jsx",
   "scripts": {
     "test": "./node_modules/.bin/eslint src --ext .js --ext .jsx",
-    "db": "docker-compose -f server/docker-compose.yml up",
-    "db:rm": "docker-compose -f server/docker-compose.yml rm",
-    "db:migration:create": "db-migrate --migrations-dir ./server/migration --sql-file create",
-    "db:migrate": "db-migrate --migrations-dir ./server/migration up",
-    "db:revert": "db-migrate --migrations-dir ./server/migration down",
-    "db:test": "docker run --rm -v $(pwd)/server/migration/sqls/:/test digit/docker-pg-prove -h $PGHOST -p $PGPORT -u $PGUSER -w $PGPASSWORD -d $PGDATABASE -t '/test/*-test.sql'",
+    "db": "./scripts/db.sh up",
+    "db:rm": "./scripts/db.sh rm",
+    "db:migration:create": "./scripts/db-migrate.sh --sql-file create",
+    "db:migrate": "./scripts/db-migrate.sh up",
+    "db:revert": "./scripts/db-migrate.sh down",
+    "db:test": "./scripts/db-test.sh",
     "client": "./node_modules/.bin/webpack-dev-server --host localhost --open",
-    "server": "./node_modules/.bin/postgraphql postgres://$PGUSER:$PGPASSWORD@$PGHOST:$PGPORT/$PGDATABASE --schema give_me_time --development",
+    "server": "./scripts/server.sh",
     "build": "./node_modules/.bin/webpack ./webpack.config.js"
   },
   "repository": {
