--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:test": "./scripts/db-test.sh",
     "client": "./node_modules/.bin/webpack-dev-server --host localhost --open",
     "server": "./scripts/server.sh",
-    "build": "./node_modules/.bin/webpack ./webpack.config.js"
+    "build": "./node_modules/.bin/webpack ./webpack.config.js",
     "jest": "jest --verbose"
   },
   "repository": {
