--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,14 @@ services:
 
 language: node_js
 
+env:
+  DOCKER_COMPOSE_VERSION: 1.7.1
+
 before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
   - npm run db
 
 node_js:
