--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,8 @@ services:
 
 language: node_js
 
-env:
-  DOCKER_COMPOSE_VERSION: 1.7.1
-
 before_install:
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-  - npm run db
+  - docker run --name server-db -it --rm -e POSTGRES_PASSWORD=postgres -e PG_PROJECT_USER=give_me_time -e PG_PROJECT_PASSWORD=give_me_time -e PG_PROJECT_DATABASE=give_me_time -v $(pwd)/server/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh -v $(pwd)/server/superuser.sql:/sql/superuser.sql -p 5430:5432 postgres
 
 node_js:
   - "6"
