--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "client": "./node_modules/.bin/webpack-dev-server --host localhost --open",
     "server": "./scripts/server.sh",
     "build": "./node_modules/.bin/webpack ./webpack.config.js",
-    "jest": "jest --verbose"
+    "test:watch": "mocha --compilers js:babel-register --recursive --watch"
   },
   "repository": {
     "type": "git",
@@ -40,11 +40,13 @@
     "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "db-migrate": "^0.9.25",
+    "enzyme": "^2.3.0",
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
     "expect": "^1.20.1",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "redux-mock-store": "^1.1.0",
     "style-loader": "^0.13.1",
@@ -68,6 +70,7 @@
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "redux-form": "^5.2.5",
     "redux-thunk": "^2.1.0"
   }
 }
