--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Project to give some time to a R&D project suggested by a team member",
   "main": "src/index.jsx",
   "scripts": {
-    "test": "./node_modules/.bin/eslint . --ext .js --ext .jsx && mocha --compilers js:babel-register --recursive",
+    "test": "./node_modules/.bin/eslint . --ext .js --ext .jsx && ./node_modules/.bin/karma start --single-run=true karma.conf.js",
     "db": "./scripts/db.sh up",
     "db:rm": "./scripts/db.sh rm",
     "db:migration:create": "./scripts/db-migrate.sh --sql-file create",
     "db:migrate": "./scripts/db-migrate.sh up",
     "db:revert": "./scripts/db-migrate.sh down",
     "db:test": "./scripts/db-test.sh",
-    "client": "./node_modules/.bin/webpack-dev-server --host localhost --open",
+    "start": "./node_modules/.bin/webpack-dev-server --config ./tooling/webpack.config.js --inline --quiet --host localhost --open",
+    "webpack": "./node_modules/.bin/webpack --config tooling/webpack.config.js",
     "server": "./scripts/server.sh",
     "build": "./node_modules/.bin/webpack ./webpack.config.js",
-    "test:watch": "mocha --compilers js:babel-register --recursive --watch"
+    "test:watch": "./node_modules/.bin/karma start --single-run=false karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,9 @@
   },
   "homepage": "https://github.com/ericraffin/givemetime#readme",
   "devDependencies": {
-    "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-flow-comments": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
@@ -40,11 +39,24 @@
     "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "db-migrate": "^0.9.25",
-    "enzyme": "^2.3.0",
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
     "expect": "^1.20.1",
+    "html-webpack-plugin": "^2.21.0",
+    "isparta": "^4.0.0",
+    "isparta-instrumenter-loader": "^1.0.0",
+    "istanbul": "^0.4.3",
+    "karma": "^0.13.22",
+    "karma-cli": "^1.0.0",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.5.3",
+    "phantomjs": "^2.1.7",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-polyfill-object-assign": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
