--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma": "^0.13.22",
     "karma-cli": "^1.0.0",
     "karma-coverage": "^1.0.0",
+    "karma-coveralls": "^1.1.2",
     "karma-mocha": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
