--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --inline --hot --host localhost --open",
     "webpack": "./node_modules/.bin/webpack --config webpack.config.js",
     "server": "./scripts/server.sh",
+    "psql": "./scripts/psql.sh",
     "build": "./node_modules/.bin/webpack ./webpack.config.js",
     "test:watch": "./node_modules/.bin/karma start --single-run=false karma.conf.js"
   },
