--- a/package.json
+++ b/package.json
@@ -74,14 +74,19 @@
     ]
   },
   "dependencies": {
-    "material-ui": "^0.15.0",
-    "postgraphql": "^1.5.0",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.2.2",
+    "isparta-instrumenter-loader": "^1.0.1",
+    "istanbul": "^0.4.4",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "material-ui": "^0.15.1",
+    "postgraphql": "^1.7.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-google-login": "^2.0.0",
     "react-grid-layout": "^0.12.3",
     "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
+    "react-router": "^2.5.1",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
