--- a/package.json
+++ b/package.json
@@ -59,9 +59,13 @@
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-polyfill-object-assign": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
+    "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "redux-mock-store": "^1.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
@@ -91,5 +95,6 @@
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-thunk": "^2.1.0"
-  }
+  },
+  "pre-commit": "test"
 }
