--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ["react", "es2015", "stage-1"]
+  "presets": ["react", "es2015", "stage-1"],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }
 }
