--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Project to give some time to a R&D project suggested by a team member",
   "main": "src/index.jsx",
+  "pre-commit": "test",
   "scripts": {
     "test": "./node_modules/.bin/eslint . --ext .js --ext .jsx && NODE_ENV=test ./node_modules/.bin/karma start --single-run=true karma.conf.js",
     "db": "./scripts/db.sh up",
@@ -65,8 +66,8 @@
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
+    "redux-devtools-diff-monitor": "^5.0.5",
     "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
     "redux-mock-store": "^1.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
@@ -96,6 +97,5 @@
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-thunk": "^2.1.0"
-  },
-  "pre-commit": "test"
+  }
 }
