--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "db-migrate": "^0.9.25",
-    "eslint": "^2.11.1",
+    "eslint": "^3.1.1",
     "eslint-plugin-react": "^5.1.1",
     "expect": "^1.20.1",
     "html-webpack-plugin": "^2.21.0",
@@ -56,7 +56,7 @@
     "karma-mocha": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.5.3",
+    "mocha": "^3.0.0-1",
     "phantomjs": "^2.1.7",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-polyfill-object-assign": "0.0.2",
@@ -80,12 +80,13 @@
     ]
   },
   "dependencies": {
-    "eslint": "^2.13.1",
+    "eslint": "^3.1.1",
     "eslint-plugin-react": "^5.2.2",
     "isparta-instrumenter-loader": "^1.0.1",
     "istanbul": "^0.4.4",
     "karma-phantomjs-launcher": "^1.0.1",
     "material-ui": "^0.15.1",
+    "mocha": "^3.0.0-1",
     "postgraphql": "^1.7.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
