--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-flow-comments": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
@@ -42,6 +43,7 @@
     "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "db-migrate": "^0.9.25",
+    "enzyme": "^2.4.1",
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
     "expect": "^1.20.1",
@@ -49,6 +51,7 @@
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "istanbul": "^0.4.3",
+    "json-loader": "^0.5.4",
     "karma": "^1.1.0",
     "karma-cli": "^1.0.0",
     "karma-coverage": "^1.0.0",
