--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:unit": "./node_modules/.bin/mocha --compilers js:babel-register --recursive $(find src -name '*.spec.js')",
     "test:unit:watch": "npm run --loglevel=silent test:unit -- --watch"
   },
-  "main": "src/index.jsx",
+  "main": "src/index.js",
   "devDependencies": {
     "babel-cli": "~6.14.0",
     "babel-core": "~6.14.0",
