--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:unit": "./node_modules/.bin/mocha --compilers js:babel-register --recursive $(find src -name '*.spec.js')",
     "test:unit:watch": "npm run --loglevel=silent test:unit -- --watch"
   },
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "devDependencies": {
     "babel-cli": "~6.14.0",
     "babel-core": "~6.14.0",
@@ -32,24 +32,22 @@
     "css-loader": "^0.23.1",
     "db-migrate": "^0.9.25",
     "eslint": "^3.1.1",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-react": "^5.2.2",
     "expect": "^1.20.1",
     "isparta": "^4.0.0",
-    "isparta-instrumenter-loader": "^1.0.0",
+    "isparta-instrumenter-loader": "^1.0.1",
     "istanbul": "^0.4.4",
     "mocha": "^3.0.0-1",
+    "nock": "^8.0.0",
     "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "redux-mock-store": "^1.1.0",
+    "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "webpack": "~1.13.2",
     "webpack-dev-server": "~1.16.1",
-    "webpack-merge": "~0.14.1",
-    "eslint": "^3.1.1",
-    "eslint-plugin-react": "^5.2.2",
-    "isparta-instrumenter-loader": "^1.0.1",
-    "fetch-mock": "^5.1.1"
+    "webpack-merge": "~0.14.1"
   },
   "dependencies": {
     "material-ui": "^0.15.4",
