--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,6 @@
         "space-in-parens": ["error", "never"],
         "space-infix-ops": "error",
         "no-multi-spaces": "error",
-        "arrow-parens": ["error", "always"]
+        "arrow-parens": ["error", "as-needed"]
     }
 }
