Use browser pages instead of dialog and simplify the associated components and reducers. Have a proper separation between react and redux. Refactor project propTypes.

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-grid-layout": "^0.13.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
+    "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-form": "^6.0.5",
