Fix travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 language: node_js
 
 before_install:
-  - docker run --name server-db -d -e POSTGRES_PASSWORD=postgres -e PG_PROJECT_USER=give_me_time -e PG_PROJECT_PASSWORD=give_me_time -e PG_PROJECT_DATABASE=give_me_time -v $(pwd)/server/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh -v $(pwd)/server/superuser.sql:/sql/superuser.sql -p 5430:5432 postgres
+  - docker run --name server-db -d -e POSTGRES_PASSWORD=postgres -e PG_PROJECT_OWNER=give_me_time_owner -e PG_PROJECT_USER=give_me_time_user -e PG_PROJECT_PASSWORD=give_me_time -e PG_PROJECT_DATABASE=give_me_time -v $(pwd)/server/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh -v $(pwd)/server/superuser.sql:/sql/superuser.sql -p 5430:5432 postgres
 
 node_js:
   - "6"
@@ -14,5 +14,5 @@ node_js:
 
 script:
   - npm run db:migrate # depends on npm package
-  - docker run --rm --link server-db:db -v $(pwd)/server/migration/sqls/:/test digit/docker-pg-prove -h db -p 5432 -u give_me_time -w give_me_time -d give_me_time -t '/test/*-test.sql'
+  - docker run --rm --link server-db:db -v $(pwd)/server/migration/sqls/:/test digit/docker-pg-prove -h db -p 5432 -u give_me_time_owner -w give_me_time -d give_me_time -t '/test/*-test.sql'
   - npm test
