--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^3.6.0",
     "eslint-plugin-react": "^6.3.0",
     "expect": "^1.20.1",
+    "file-loader": "^0.9.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.1",
     "istanbul": "^0.4.4",
