--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
-    "start": "API_URL=http://localhost:3000 PGADMINPASSWORD=postgres PGPASSWORD=give_me_time GOOGLE_AUTH_MOCK=true docker-compose -f docker-compose.yml -f docker-compose.dev.yml up"
+    "start": "API_URL=http://localhost:3000 PGADMINPASSWORD=postgres PGPASSWORD=give_me_time GOOGLE_AUTH_MOCK=true docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
+    "_db_migrate": "PGPASSWORD=give_me_time docker-compose -f docker-compose.yml run --rm -w /usr/src/app api ./node_modules/.bin/db-migrate --migrations-dir ./migration",
+    "db.migrate": "npm run --loglevel=silent _db_migrate --name=db.migrate up",
+    "db.revert": "npm run --loglevel=silent _db_migrate --name=db.migrate down",
+    "db.migration.create": "npm run --loglevel=silent _db_migrate --name=db.migrate --sql-file create"
   },
   "repository": {
     "type": "git",
