--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "_db_migrate": "PGPASSWORD=give_me_time docker-compose -f docker-compose.yml run --rm -w /usr/src/app api ./node_modules/.bin/db-migrate --migrations-dir ./migration",
     "db.migrate": "npm run --loglevel=silent _db_migrate --name=db.migrate up",
     "db.revert": "npm run --loglevel=silent _db_migrate --name=db.migrate down",
-    "db.migration.create": "npm run --loglevel=silent _db_migrate --name=db.migrate --sql-file create"
+    "db.migration.create": "npm run --loglevel=silent _db_migrate --name=db.migrate --sql-file create",
+    "db.test": "./api/db-test.sh",
+    "reset": "docker-compose stop && docker-compose rm --force"
   },
   "repository": {
     "type": "git",
