Add test commands

--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,11 @@
   "description": "Project to give some time to a R&D project suggested by a team member",
   "main": "src/index.jsx",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test.lint": "./node_modules/.bin/eslint . --ext .js --ext .jsx",
+    "test.lint.fix": "npm run --loglevel=silent test.lint -- --fix",
+    "test.unit": "./node_modules/.bin/mocha --compilers js:babel-register --recursive $(find src -name '*.spec.js')",
+    "test.unit.watch": "npm run --loglevel=silent test.unit -- --watch"
   },
   "devDependencies": {
     "babel-cli": "~6.14.0",
