--- a/.travis.yml
+++ b/.travis.yml
@@ -3,27 +3,21 @@ services:
 - docker
 language: node_js
 before_install:
-- docker run --name server-db -d -e POSTGRES_PASSWORD=postgres -e PG_PROJECT_OWNER=give_me_time_owner
-  -e PG_PROJECT_USER=give_me_time_user -e PG_PROJECT_PASSWORD=give_me_time -e PG_PROJECT_DATABASE=give_me_time
-  -v $(pwd)/server/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh -v $(pwd)/server/superuser.sql:/sql/superuser.sql
-  -p 5430:5432 postgres
+- npm run start -- -d
 node_js:
 - '6'
 script:
-- npm run db:migrate
-- docker run --rm --link server-db:db -v $(pwd)/server/migration/sqls/:/test digit/docker-pg-prove
-  -h db -p 5432 -u give_me_time_owner -w give_me_time -d give_me_time -t '/test/*-test.sql'
+- npm run db.test
+- npm run db.revert -- --count 10000
+- npm run db.migrate
+- npm run db.test
 - npm test
-- npm run db:revert -- --count 10000
-- npm run db:migrate
-- docker run --rm --link server-db:db -v $(pwd)/server/migration/sqls/:/test digit/docker-pg-prove
-  -h db -p 5432 -u give_me_time_owner -w give_me_time -d give_me_time -t '/test/*-test.sql'
 after_success:
 # https://sebest.github.io/post/using-travis-ci-to-build-docker-images/
 - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
 - export REPO=givemetime/givemetime
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-- docker-compose build # depends on $API_URL and $GOOGLE_CLIENT_ID
+- docker-compose build # depends on API_URL and $GOOGLE_CLIENT_ID
 - docker tag $REPO:$COMMIT $REPO:$TAG
 - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
 - docker push $REPO
