--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "npm run --loglevel=silent test.lint && npm run --loglevel=silent test.unit",
     "start": "API_URL=http://localhost:3000 PGADMINPASSWORD=postgres PGPASSWORD=give_me_time GOOGLE_AUTH_MOCK=true docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-    "_db_migrate": "PGPASSWORD=give_me_time docker-compose -f docker-compose.yml run --rm -w /usr/src/app api ./node_modules/.bin/db-migrate --migrations-dir ./migration",
+    "_db_migrate": "PGPASSWORD=give_me_time docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm -w /usr/src/app api ./node_modules/.bin/db-migrate --migrations-dir ./migration",
     "db.migrate": "npm run --loglevel=silent _db_migrate up",
     "db.revert": "npm run --loglevel=silent _db_migrate down",
     "db.migration.create": "npm run --loglevel=silent _db_migrate --sql-file create",
