--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
     "react",
-    "es2015"
+    "es2015",
+    "stage-3"
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": ["transform-object-rest-spread", "transform-runtime", "syntax-async-functions"]
 }
