--- a/app/package.json
+++ b/app/package.json
@@ -13,14 +13,21 @@
   "devDependencies": {
     "babel-cli": "~6.14.0",
     "babel-core": "~6.14.0",
+    "babel-eslint": "^6.1.2",
     "babel-istanbul": "~0.11.0",
     "babel-loader": "~6.2.5",
     "babel-plugin-transform-object-rest-spread": "~6.8.0",
-    "babel-preset-es2015": "~6.14.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "~6.11.1",
     "babel-preset-react-hmre": "~1.1.1",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-runtime": "^6.11.6",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
     "css-loader": "^0.25.0",
-    "eslint": "^3.6.0",
+    "eslint": "^3.7.1",
+    "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-react": "^6.3.0",
     "expect": "^1.20.1",
     "file-loader": "^0.9.0",
@@ -45,6 +52,7 @@
     "prop-types": "^0.2.0",
     "react": "^15.3.1",
     "react-dom": "^15.1.0",
+    "react-google-charts": "^1.2.1",
     "react-google-login": "^2.0.0",
     "react-grid-layout": "^0.13.3",
     "react-redux": "^4.4.5",
